More heroku deploying refactoring.